--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,12 @@ server:
 spring:
   application:
     name: user-service
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true
+      path: /h2-console
 
 # eureka 서버에 등록할 수 있도록 설정
 eureka:
@@ -20,3 +26,7 @@ eureka:
     service-url:
       # 서버가 가진 위치값을 설정
       defaultZone: http://127.0.0.1:8761/eureka
+
+
+greeting:
+  message: Welcome to the Simple E-Commerce
