--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     implementation 'com.h2database:h2:1.3.176'
