--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     // https://mvnrepository.com/artifact/org.modelmapper/modelmapper
