--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,3 +35,12 @@ eureka:
 
 greeting:
   message: Welcome to the Simple E-Commerce
+
+logging:
+  level:
+    com:
+      example:
+        userservice: debug
+#    org:
+#      springframework:
+#        security: debug
