feat: actuator 추가 후 refresh 테스트 시 Bad Request 오류

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,8 @@ logging:
   level:
     com.example.userservice: debug
 
-token:
-  expiration_time: 86_400_000
-  secret: user_token
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans
