--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,4 +2,5 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
-      name: ecommerce
+#      name: ecommerce
+      name: user-service
