feat: feignClient 예외처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,10 @@ greeting:
 
 logging:
   level:
-    com.example.userservice: debug
+    com:
+      example:
+        userservice:
+          clinet: debug
 
 management:
   endpoints:
